# Website-AI-helper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.ps1  setup.sh
scripts/: _env.ps1  _env.sh  start-embeddings.ps1  start-embeddings.sh  start-llm.ps1  start-llm.sh  start-qdrant.ps1  start-qdrant.sh
website_ai_helper/: __init__.py  agent.py  cli.py  config.py  ingest.py  lexical.py  llm.py  main.py  qa.py  retrieval.py  structured.py  vectorstore.py
website_ai_helper/web/: widget.html  widget.js
